<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.12</version>
        <relativePath/>
    </parent>

    <groupId>fr.gouv</groupId>
    <artifactId>dossierfacile</artifactId>
    <version>1.0.0</version>
    <modules>
        <module>dossierfacile-common-library</module>
        <module>dossier-facile-logging-library</module>
        <module>dossierfacile-common-test-library</module>
        <module>dossierfacile-bo</module>
        <module>dossierfacile-process-file</module>
        <module>dossierfacile-api-tenant</module>
        <module>dossierfacile-api-owner</module>
        <module>dossierfacile-api-watermark</module>
        <module>dossierfacile-pdf-generator</module>
        <module>dossierfacile-task-scheduler</module>
    </modules>
    <packaging>pom</packaging>

    <name>dossierfacile</name>
    <description>DossierFacile</description>

    <properties>
        <revision>3.3.6</revision>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <org.mapstruct.version>1.6.2</org.mapstruct.version>
        <lombok.version>1.18.34</lombok.version>
        <keycloak.version>26.0.3</keycloak.version>
        <log4j-api.version>2.17.1</log4j-api.version>
        <logback-encoder.version>7.4</logback-encoder.version>
        <commons-io.version>2.17.0</commons-io.version>
        <okio.version>3.9.1</okio.version>
        <pdfbox.version>3.0.6</pdfbox.version>
        <jbig2-imageio.version>3.0.4</jbig2-imageio.version>
        <jai-imageio-core.version>1.4.0</jai-imageio-core.version>
        <jai-imageio-jpeg2000.version>1.4.0</jai-imageio-jpeg2000.version>
        <bcprov-jdk18on.version>1.79</bcprov-jdk18on.version>
        <bcpkix-jdk18on.version>1.78.1</bcpkix-jdk18on.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.keycloak</groupId>
                <artifactId>keycloak-admin-client</artifactId>
                <version>${keycloak.version}</version>
            </dependency>
            <dependency>
                <groupId>fr.dossierfacile</groupId>
                <artifactId>dossierfacile-common-library</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>fr.dossierfacile</groupId>
                <artifactId>dossier-facile-logging-library</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logback-encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okio</groupId>
                <artifactId>okio</artifactId>
                <version>${okio.version}</version>
            </dependency>
            <dependency>
                <groupId>com.brevo</groupId>
                <artifactId>brevo</artifactId>
                <version>1.0.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.squareup.okhttp3</groupId>
                        <artifactId>okhttp</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.squareup.okio</groupId>
                        <artifactId>okio</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.google.code.gson</groupId>
                        <artifactId>gson</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox-tools</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>jbig2-imageio</artifactId>
                <version>${jbig2-imageio.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.jai-imageio</groupId>
                <artifactId>jai-imageio-core</artifactId>
                <version>${jai-imageio-core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.jai-imageio</groupId>
                <artifactId>jai-imageio-jpeg2000</artifactId>
                <version>${jai-imageio-jpeg2000.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bcprov-jdk18on.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>${bcpkix-jdk18on.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
